cabal-version:       3.0
name:                pahket
version:             0.0.0
synopsis:            AutoHotKey extension
description:         See README for more info
homepage:            https://github.com/NickSeagull/pahket
bug-reports:         https://github.com/NickSeagull/pahket/issues
license:             GPL-3.0-or-later
author:              Nikita Tchayka
maintainer:          nikitatchayka+hackage@outlook.com
copyright:           2020 Nikita Tchayka
build-type:          Simple
tested-with:         GHC == 8.6.5
extra-source-files:  ahk/Util.ahk

source-repository head
  type:                git
  location:            https://github.com/NickSeagull/pahket.git

common common-options
  build-depends:       base-noprelude
                     , typed-process
                     , rio
                     , vector >= 0.12.1.2
                     , temporary
                     , exceptions
                     , string-interpolate
                     , text
                     , file-embed
                     , scotty
                     , aeson
                     , data-default-class
                     , warp
                     , http-types
                     , optparse-generic
                     , tomland
                     , filepath
                     , directory

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  default-language:    Haskell2010
  default-extensions:  AutoDeriveTypeable
                       BangPatterns
                       BinaryLiterals
                       ConstraintKinds
                       DataKinds
                       DefaultSignatures
                       DeriveDataTypeable
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       DerivingStrategies
                       DoAndIfThenElse
                       EmptyDataDecls
                       ExistentialQuantification
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GADTs
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MonadFailDesugaring
                       MultiParamTypeClasses
                       MultiWayIf
                       NamedFieldPuns
                       OverloadedStrings
                       PartialTypeSignatures
                       PatternGuards
                       PatternSynonyms
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeFamilies
                       TypeSynonymInstances
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Pahket
                       Pahket.Commands.Core
                       Pahket.Commands.Help
                       Pahket.AHK
                       Pahket.Finisher
                       Pahket.Server
                       Prelude

executable pahket
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       pahket

test-suite pahket-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       pahket
                     , hspec
                     , hspec-discover
                     , ghc
                     , silently
  other-modules:       Pahket.AHKSpec
  build-tool-depends: hspec-discover:hspec-discover == 2.*

benchmark pahket-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       pahket
                     , gauge